issue fixed #20163 On iPhone5 device newsletter subscription input box not contain complete text (placeholder)
issue fixed #20163 On iPhone5 device newsletter subscription input box not contain complete text (placeholder)

--- a/app/design/frontend/Magento/luma/Magento_Newsletter/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Newsletter/web/css/source/_module.less
@@ -47,6 +47,7 @@
 
         input {
             padding-left: 35px;
+            font-size: 12px;
         }
 
         .title {
